<resources>
    <string name="app_name" translatable="false">ScooterSharing app V9</string>
    <string name="scooter_sharing">Scooter Sharing</string>
    <string name="start_ride">Start Ride</string>
    <string name="update_ride">Update Ride</string>
    <string name="start_name">Enter the scooter name</string>
    <string name="start_location">Enter your location</string>
    <string name="update_name">The current scooter name</string>
    <string name="update_location">The current scooter location</string>
    <string name="version">API Level %d</string>
    <string name="ride_started">Ride started using %s.</string>
    <string name="ride_updated">Ride updated using %s.</string>
    <string name="list_rides">List Rides</string>
    <string name="logout">Log out</string>
    <string name="default_ride_name">Ride name</string>
    <string name="default_ride_location">Ride location</string>
    <string name="default_ride_date">Ride date</string>
    <string name="delete_dialog_title">Delete ride</string>
    <string name="delete_dialog_description">Are you sure you want to delete this ride?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="delete_dialog_delete">Delete</string>
    <string name="start_ride_dialog_title">Add ride</string>
    <string name="start_ride_dialog_description">Are you sure you want to add this ride?</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_update">Update</string>
    <string name="update_ride_dialog_title">Update ride</string>
    <string name="update_ride_dialog_description">Are you sure you want to update this ride?</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="build_and_api_version" translatable="false">v.%s (%s)</string>
    <string name="maps">Maps</string>
    <string name="location">Location</string>
</resources>