<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
    android:id="@+id/scooter_sharing_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:padding="24dp"
    android:textSize="20sp"
    tools:text="@string/scooter_sharing" />
    <!-- Button to start a ride -->
    <Button
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_ride_button"
        android:layout_margin="15dp"
        android:text="@string/start_ride"/>
    <!-- Button to update a ride -->
    <Button
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/update_ride_button"
        android:layout_margin="15dp"
        android:text="@string/update_ride"/>
    <TextView
        android:id="@+id/api_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="24dp"
        tools:text="@string/version" />
</LinearLayout>