<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    app:justifyContent="space_between">
    <TextView
        android:id="@+id/ride_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/default_ride_name"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/ride_location"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/default_ride_location"/>
    <TextView
        android:id="@+id/ride_date"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/default_ride_date"/>
</com.google.android.flexbox.FlexboxLayout>